--- a/app/src/main/res/layout/activity_side_navigation.xml
+++ b/app/src/main/res/layout/activity_side_navigation.xml
@@ -21,14 +21,27 @@
             android:background="#ffffff"
             android:minHeight="?attr/actionBarSize"/>
 
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
     </LinearLayout>
     
     
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/menu_main"
         android:background="#17E017"/>
+
+
+    <LinearLayout
+        android:background="@color/colorPrimary"
+        android:layout_gravity="end"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
